# qt_minesweeper

./: CMakeLists.txt  README.md  images.qrc  source.qrc
include/: .clang_complete  button.hpp  game.hpp  screen.hpp  type.hpp
sources/: .clang_complete  main.cpp
sources/mines/: .clang_complete  button.cpp  game.cpp  screen.cpp
styles/: minesweeper_style.qss
